# OpenCVCamQTFinale

./: CMakeLists.txt  Dockerfile  main.cpp  nfc_cam.cpp  nfc_cam.h  nfc_device.cpp  nfc_device.h  nfc_device.hpp  opencvqt.desktop  publickey.asc
